GNOME Bugzilla – Bug 689065
libanjuta: Set "relative-path" property of AnjutaFileDropEntry as readwrite.
Last modified: 2012-11-28 20:23:39 UTC
See the attached patch.
Created attachment 229883 [details] [review] libanjuta: Set "relative-path" property of AnjutaFileDropEntry as readwrite. Also set the default to NULL and pass G_PARAM_STATIC_STRINGS as paramspec flag. Fixes the following assertion: (lt-anjuta:10419): GLib-GObject-CRITICAL **: g_object_class_install_property: assertion `pspec->flags & (G_PARAM_READABLE | G_PARAM_WRITABLE)' failed
Comment on attachment 229883 [details] [review] libanjuta: Set "relative-path" property of AnjutaFileDropEntry as readwrite. Thanks for your patch.