libanjuta: Set "relative-path" property of AnjutaFileDropEntry as readwrite.

Also set the default to NULL and pass G_PARAM_STATIC_STRINGS as paramspec flag.
Fixes the following assertion:
(lt-anjuta:10419): GLib-GObject-CRITICAL **: g_object_class_install_property: assertion `pspec->flags & (G_PARAM_READABLE | G_PARAM_WRITABLE)' failed

https://bugzilla.gnome.org/show_bug.cgi?id=689065